# comp0034-cw2i-YueYang101

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
Data/: sum_stats.csv  sum_stats_no_promo.csv  sum_stats_promo.csv
PastaSalesData/: sum_stats_promo_record.csv
src/: PastaSales_app.py  PastaSales_dash.py  figure_reference.py  figures.py  layout_elements.py
tests/: app_test.py  conftest.py
