[project]
name = "PastaSales_app"
version = "1.0"
description = "An app to show the pasta sales of 3 different brands in a grocery"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]